slurm-36736248.out
  File "/home/jdoelger/InfluenzaFitnessInference/code/notebooks/fitnessinference/simulation.py", line 632
    print(simulation started)
                           ^
SyntaxError: invalid syntax
